tests/invalid/generated_binop_floordiv_bytearray_float/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytearray = bytearray(b"hello")
    y: float = 1.0
    z = x // y
